[gd_scene load_steps=16 format=3 uid="uid://clpd4aclajqmd"]

[ext_resource type="Script" uid="uid://cbv3p47bngfgp" path="res://scripts/tracker.gd" id="1_2oy2a"]
[ext_resource type="FontFile" uid="uid://q0n4smkjtegn" path="res://assets/fonts/Coolvetica Rg.otf" id="1_bfym8"]
[ext_resource type="Texture2D" uid="uid://b7kvraox1a72a" path="res://assets/tracker/arrow-left.svg" id="1_ocy8l"]
[ext_resource type="Texture2D" uid="uid://ciumnb85v66mc" path="res://assets/home_bg.png" id="2_2o4v1"]
[ext_resource type="Shader" uid="uid://4uk3iwjpoolw" path="res://shaders/bg.gdshader" id="2_rep8v"]
[ext_resource type="Texture2D" uid="uid://ribmmpthspxj" path="res://assets/tracker/dots-three-vertical-bold.svg" id="3_dcoxp"]
[ext_resource type="PackedScene" uid="uid://isickk7036q" path="res://scenes/task.tscn" id="4_dcoxp"]
[ext_resource type="Texture2D" uid="uid://col7mg5ly0af8" path="res://assets/tracker/plus.svg" id="5_2oy2a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i26kx"]
shader = ExtResource("2_rep8v")
shader_parameter/size = 15.0
shader_parameter/speed = 0.15
shader_parameter/direction_x = 1.0
shader_parameter/direction_y = 1.0
shader_parameter/movement_texture = ExtResource("2_2o4v1")
shader_parameter/opacity = 0.4
shader_parameter/is_paused = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2oy2a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k524b"]
content_margin_top = 30.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o4v1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rep8v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2oy2a"]
bg_color = Color(0, 0.313726, 0.270588, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k524b"]
bg_color = Color(0, 0.407336, 0.353246, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Tracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2oy2a")

[node name="BGStatic" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="BGPattern" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_i26kx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2o4v1")
stretch_mode = 1

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -541.0
offset_right = 538.0
offset_bottom = 186.0
grow_horizontal = 2

[node name="Back" type="TextureButton" parent="Title"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("1_ocy8l")

[node name="TitleText" type="RichTextLabel" parent="Title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("1_bfym8")
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_2oy2a")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k524b")
text = "Daily Agenda"
horizontal_alignment = 1

[node name="3-dots" type="TextureButton" parent="Title"]
layout_mode = 2
texture_normal = ExtResource("3_dcoxp")
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -990.0
offset_right = 460.0
offset_bottom = 999.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tasks" type="ScrollContainer" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1400)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2o4v1")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Tasks"]
layout_mode = 2
theme_override_constants/separation = 280

[node name="Task" parent="ScrollContainer/VBoxContainer/Tasks/VBoxContainer" instance=ExtResource("4_dcoxp")]
layout_mode = 2

[node name="Completed" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_colors/default_color = Color(0, 0.870588, 0.756863, 1)
theme_override_fonts/normal_font = ExtResource("1_bfym8")
theme_override_font_sizes/normal_font_size = 64
text = "Completed"
vertical_alignment = 1

[node name="FinishedTasks" type="ScrollContainer" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/FinishedTasks"]
layout_mode = 2
theme_override_constants/separation = 275

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AddTask" type="Button" parent="CanvasLayer"]
modulate = Color(0, 0.996078, 0.866667, 1)
offset_left = 882.0
offset_top = 2216.0
offset_right = 1030.0
offset_bottom = 2353.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_rep8v")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/hover = SubResource("StyleBoxFlat_k524b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2oy2a")
theme_override_styles/normal = SubResource("StyleBoxFlat_2oy2a")
icon = ExtResource("5_2oy2a")
icon_alignment = 1

[connection signal="pressed" from="CanvasLayer/AddTask" to="." method="_on_add_task_pressed"]
